# Isnaujo3

./: CMakeLists.txt  README.md  RUNMME.bat  Setup1.msi  Studentu skaicius 1000.txt  annotated.html  class_studentas-members.html  class_studentas.html  class_studentas_l.html  class_zmogus-members.html  doxygen.css  doxygen_crawl.html  f.cpp  f.h  f_8h_source.html  files.html  functions_func.html  functions_vars.html  funkcijos.cpp  funkcijos.h  galvociai.txt  galvociai_med.txt  galvociai_medv.txt  globals.html  h.h  h_8h.html  h_8h_source.html  l__1_8cpp.html  l__2_8cpp.html  l__3_8cpp.html  laikai.txt  listai_8cpp.html  listas  listas.cpp  main.cpp  menudata.js  rezultataiv.txt  studentas.cpp  studentas.h  studentasl.cpp  (+11 more)
1/: funkcijos.h  funkcijosl.cpp
1.5/: f.cpp  f.h  h.cpp  h.h  l_1.cpp  l_2.cpp  main.cpp  v_1.cpp
2/: funkcijos.cpp  mainl.cpp  mainv.cpp
html/: class_studentas_l-members.html  class_zmogus.html  classes.html  f_8cpp.html  f_8h.html  functions.html  functions_rela.html  globals_func.html  h_8cpp.html  hierarchy.html  index.html  main_8cpp.html  v__2_8cpp.html  vektorius_8cpp.html  zmogus_8h.html
klases/: CMakeLists.txt  RUNMME.bat  f.cpp  f.h  h.h
klases/src/: h.cpp  l_1.cpp  l_2.cpp  l_3.cpp  listai.cpp  main.cpp  v_1.cpp  v_2.cpp  v_3.cpp  vektoriai.cpp
visas/: CMakeLists.txt  RUNMME.bat  f.cpp  h.cpp  h.h  l_1.cpp  l_3.cpp  listai.cpp  main.cpp  runmme.bat  studentai_1000.txt  v_2.cpp  v_3.cpp  vektorius.cpp  zmogus.h
visas/include/: f.h
visas/src/: h.cpp  main.cpp  v_1.cpp  v_2.cpp  v_3.cpp  vektoriai.cpp
visas/src /: l_2.cpp
(+36 files in other folders)
